--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "impress.js"]
 	path = impress.js
-	url = git@github.com:pmn4/impress.js.git
+	url = git://github.com/bartaz/impress.js.git
